# genart

./: .gitignore  CMakeLists.txt  comparison_window.cc  comparison_window.h  gen_convert.cc  gen_movie.cc  gen_pic.cc  genetic_effect_builder.cc  genetic_effect_builder.h  movie_player.cc  slideshow.cc
benchmark/: config  run_benchmark.sh
circlepack/: CMakeLists.txt  circlepack_genome.cc  circlepack_genome.h  circlepack_genome_factory.cc  circlepack_genome_factory.h  circlepack_params.proto  circlepack_renderer.cc  circlepack_renderer.h
core/: CMakeLists.txt  effect_visitor.h  fitness.h  fitness_benchmark.cc  fitness_l2_with_focii.cc  fitness_l2_with_focii.h  genetic_effect.cc  genetic_effect.h  genome.h  genome_factory.h  genome_renderer.h  params.proto
image/: CMakeLists.txt  image.cc  image.h
poly/: CMakeLists.txt  animated_polygon_image.cc  animated_polygon_image.h  effect_visitor.h  fitness.h  fitness_l2_with_focii.cc  fitness_l2_with_focii.h  genome.cc  genome.h  params.proto  poly_params.proto  polygon.cc  polygon.h  polygon_animator.cc  polygon_animator.h  polygon_effect.cc  polygon_effect.h  polygon_genome.cc  polygon_genome.h  polygon_genome_factory.cc  polygon_genome_factory.h  polygon_image.proto  polygon_mutator.cc  polygon_mutator.h  polygon_mutator_test.cc  polygon_render.cc  polygon_render.h  polygon_renderer.cc  polygon_renderer.h  util.cc  util.h
util/: CMakeLists.txt  multi_thread_condition.h  offline_gl_context.cc  offline_gl_context.h  point.h  random.cc  random.h  recordio.cc  recordio.h  svg_writer.cc  svg_writer.h  window.cc  window.h
